--- a/IliasOtsmanConnBBDD/IliasOtsmanConnBBDD.csproj
+++ b/IliasOtsmanConnBBDD/IliasOtsmanConnBBDD.csproj
@@ -46,17 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormInsertJob.cs">
+    <Compile Include="FormInsertUpdateJob.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormInsertJob.Designer.cs">
-      <DependentUpon>FormInsertJob.cs</DependentUpon>
+    <Compile Include="FormInsertUpdateJob.Designer.cs">
+      <DependentUpon>FormInsertUpdateJob.cs</DependentUpon>
     </Compile>
     <Compile Include="FormShowJobs.cs">
       <SubType>Form</SubType>
@@ -67,11 +67,11 @@
     <Compile Include="Job.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormInsertJob.resx">
-      <DependentUpon>FormInsertJob.cs</DependentUpon>
+    <EmbeddedResource Include="FormInsertUpdateJob.resx">
+      <DependentUpon>FormInsertUpdateJob.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormShowJobs.resx">
       <DependentUpon>FormShowJobs.cs</DependentUpon>
