--- a/IliasOtsmanConnBBDD/IliasOtsmanConnBBDD.csproj
+++ b/IliasOtsmanConnBBDD/IliasOtsmanConnBBDD.csproj
@@ -58,13 +58,21 @@
     <Compile Include="FormInsertUpdateJob.Designer.cs">
       <DependentUpon>FormInsertUpdateJob.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormShowEmployees.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormShowEmployees.Designer.cs">
+      <DependentUpon>FormShowEmployees.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormShowJobs.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormShowJobs.Designer.cs">
       <DependentUpon>FormShowJobs.cs</DependentUpon>
     </Compile>
-    <Compile Include="Job.cs" />
+    <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Job.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
@@ -72,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormInsertUpdateJob.resx">
       <DependentUpon>FormInsertUpdateJob.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormShowEmployees.resx">
+      <DependentUpon>FormShowEmployees.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormShowJobs.resx">
       <DependentUpon>FormShowJobs.cs</DependentUpon>
